--- a/app/src/main/res/layout/activity_lista_de_contas.xml
+++ b/app/src/main/res/layout/activity_lista_de_contas.xml
@@ -16,16 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/DadosClienteId" />
-
-    <Button
-        android:text="Acessar conta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:id="@+id/AcessarContaId"
-        android:layout_below="@+id/DadosAgenciaId"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/DadosClienteId"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:text="TextView"
@@ -33,7 +25,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/DadosAgenciaId"
         android:layout_below="@+id/DadosClienteId"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:text="TextView"
@@ -41,7 +34,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/DadosContaId"
         android:layout_below="@+id/DadosAgenciaId"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <Button
+        android:text="Acessar conta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/AcessarContaId"
+        android:layout_below="@+id/DadosContaId"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="87dp" />
 
 
 </RelativeLayout>
